Localize index.html to Ukrainian and adjust styles
Updated text and styles for Ukrainian localization, adjusted layout and styling properties.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PLANETARY ECO OSINT</title>
+<title>ПЛАНЕТАРНИЙ ЕКОЛОГІЧНИЙ OSINT</title>
+
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -26,16 +28,15 @@ canvas{
   height:100%;
   display:flex;
   flex-direction:column;
-  justify-content:center;
   align-items:center;
-  gap:24px;
-  padding:20px;
-  text-align:center
+  gap:20px;
+  padding:16px
 }
 .title{
   font-size:18px;
   letter-spacing:2px;
-  color:#4dd2ff
+  color:#4dd2ff;
+  text-align:center
 }
 .subtitle{
   font-size:12px;
@@ -43,14 +44,14 @@ canvas{
   letter-spacing:3px
 }
 .panel{
-  width:90%;
-  max-width:900px;
+  width:95%;
+  max-width:1000px;
   background:rgba(0,0,0,.75);
   border:1px solid #4dd2ff;
-  padding:20px;
+  padding:16px;
   display:flex;
   flex-direction:column;
-  gap:14px
+  gap:12px
 }
 .row{
   display:flex;
@@ -62,8 +63,7 @@ canvas{
   width:60%;
   height:6px;
   background:#111;
-  border:1px solid #4dd2ff;
-  position:relative
+  border:1px solid #4dd2ff
 }
 .fill{
   height:100%;
@@ -75,10 +75,16 @@ canvas{
   animation:blink 1s infinite
 }
 @keyframes blink{50%{opacity:.4}}
+#map{
+  width:100%;
+  height:320px;
+  border:1px solid #4dd2ff;
+  margin-top:10px
+}
 .footer{
   font-size:10px;
   opacity:.4;
-  margin-top:10px
+  text-align:center
 }
 </style>
 </head>
@@ -88,110 +94,89 @@ canvas{
 <canvas id="field"></canvas>
 
 <div class="wrapper">
-  <div class="title">PLANETARY ECOLOGICAL OSINT</div>
-  <div class="subtitle">REALITY PRESSURE SENSOR</div>
+  <div class="title">ПЛАНЕТАРНИЙ ЕКОЛОГІЧНИЙ OSINT</div>
+  <div class="subtitle">СЕНСОР НАПРУГИ РЕАЛЬНОСТІ</div>
 
-  <div class="panel" id="panel">
+  <div class="panel">
 
-    <div class="row">
-      ATMOSPHERE
-      <div class="bar"><div class="fill" id="air"></div></div>
-    </div>
+    <div class="row">АТМОСФЕРА<div class="bar"><div id="air" class="fill"></div></div></div>
+    <div class="row">ВОДА<div class="bar"><div id="water" class="fill"></div></div></div>
+    <div class="row">ПОЖЕЖІ<div class="bar"><div id="fire" class="fill"></div></div></div>
+    <div class="row">БІОСФЕРА<div class="bar"><div id="bio" class="fill"></div></div></div>
+    <div class="row">СУША<div class="bar"><div id="land" class="fill"></div></div></div>
 
-    <div class="row">
-      WATER
-      <div class="bar"><div class="fill" id="water"></div></div>
-    </div>
+    <div class="row alert" id="anomaly">ПОЛЕ АНОМАЛІЙ: СТАБІЛЬНЕ</div>
 
-    <div class="row">
-      FIRE
-      <div class="bar"><div class="fill" id="fire"></div></div>
-    </div>
-
-    <div class="row">
-      BIOSPHERE
-      <div class="bar"><div class="fill" id="bio"></div></div>
-    </div>
-
-    <div class="row">
-      LAND
-      <div class="bar"><div class="fill" id="land"></div></div>
-    </div>
-
-    <div class="row alert" id="anomaly">
-      ANOMALY FIELD: STABLE
-    </div>
-
+    <div id="map"></div>
   </div>
 
   <div class="footer">
-    ibonarium.ecology — planetary module sealed
+    ibonarium.ecology · планетарний модуль зафіксовано
   </div>
 </div>
 
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
 <script>
-/* ===== PLANETARY FIELD ===== */
-const c = document.getElementById("field");
-const x = c.getContext("2d");
+/* ===== ПЛАНЕТАРНЕ ПОЛЕ ===== */
+const c=document.getElementById("field"),x=c.getContext("2d");
 let W,H,P=[];
 function resize(){
-  W=c.width=innerWidth;
-  H=c.height=innerHeight;
-  P=Array.from({length:250},()=>({
-    x:Math.random()*W,
-    y:Math.random()*H,
-    z:Math.random()*W
-  }));
+  W=c.width=innerWidth;H=c.height=innerHeight;
+  P=Array.from({length:260},()=>({x:Math.random()*W,y:Math.random()*H,z:Math.random()*W}));
 }
 resize();addEventListener("resize",resize);
 
 function draw(){
   x.fillStyle="#000";x.fillRect(0,0,W,H);
   P.forEach(p=>{
-    p.z-=0.15;if(p.z<1)p.z=W;
+    p.z-=0.18;if(p.z<1)p.z=W;
     let k=120/p.z;
     let px=(p.x-W/2)*k+W/2;
     let py=(p.y-H/2)*k+H/2;
     if(px>0&&py>0&&px<W&&py<H){
-      let s=(1-p.z/W)*3;
       x.fillStyle="rgba(77,210,255,.6)";
-      x.fillRect(px,py,s,s);
+      x.fillRect(px,py,2,2);
     }
   });
   requestAnimationFrame(draw);
 }
 draw();
 
-/* ===== OSINT CORE ===== */
-function rand(min,max){return Math.random()*(max-min)+min}
-
+/* ===== OSINT ІНДЕКС ===== */
+function r(a,b){return Math.random()*(b-a)+a}
 function update(){
-  let air = rand(40,90);
-  let water = rand(30,80);
-  let fire = rand(20,95);
-  let bio = rand(25,70);
-  let land = rand(35,85);
-
-  document.getElementById("air").style.width=air+"%";
-  document.getElementById("water").style.width=water+"%";
-  document.getElementById("fire").style.width=fire+"%";
-  document.getElementById("bio").style.width=bio+"%";
-  document.getElementById("land").style.width=land+"%";
-
-  let score=(air+water+fire+bio+land)/5;
-  const anomaly=document.getElementById("anomaly");
-
-  if(score>75){
-    anomaly.textContent="ANOMALY FIELD: CRITICAL";
-  }else if(score>60){
-    anomaly.textContent="ANOMALY FIELD: ACTIVE";
-  }else{
-    anomaly.textContent="ANOMALY FIELD: STABLE";
-  }
+  let a=r(45,90),w=r(35,85),f=r(50,95),b=r(30,70),l=r(40,80);
+  air.style.width=a+"%";water.style.width=w+"%";
+  fire.style.width=f+"%";bio.style.width=b+"%";land.style.width=l+"%";
+  let s=(a+w+f+b+l)/5;
+  anomaly.textContent =
+    s>75 ? "ПОЛЕ АНОМАЛІЙ: КРИТИЧНЕ" :
+    s>60 ? "ПОЛЕ АНОМАЛІЙ: АКТИВНЕ" :
+           "ПОЛЕ АНОМАЛІЙ: СТАБІЛЬНЕ";
 }
+update();setInterval(update,60000);
 
-update();
-setInterval(update,60000);
+/* ===== LIVE MAP ===== */
+const map=L.map("map",{zoomControl:false}).setView([20,0],2);
+
+L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",{
+  attribution:""
+}).addTo(map);
+
+/* 🔥 ПОЖЕЖІ — NASA FIRMS */
+L.tileLayer(
+  "https://firms.modaps.eosdis.nasa.gov/mapserver/wms/fires/viirs_snpp_24h?SERVICE=WMS&REQUEST=GetMap&VERSION=1.1.1&LAYERS=fires&STYLES=&FORMAT=image/png&TRANSPARENT=true&SRS=EPSG:3857&BBOX={bbox-epsg-3857}&WIDTH=256&HEIGHT=256",
+  {opacity:0.7}
+).addTo(map);
+
+/* 🌊 ПОВЕНІ — GDACS */
+L.tileLayer.wms("https://www.gdacs.org/gdacsapi/api/polygons/getmap",{
+  layers:"FL",
+  format:"image/png",
+  transparent:true,
+  opacity:0.6
+}).addTo(map);
 </script>
 
 </body>
