--- a/index.html
+++ b/index.html
@@ -3,180 +3,107 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ПЛАНЕТАРНИЙ ЕКОЛОГІЧНИЙ OSINT</title>
+<title>Планетарний екологічний OSINT</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html,body{
-  width:100%;
-  height:100%;
-  background:#000;
-  color:#9fe7ff;
-  font-family:"Courier New",monospace;
-  overflow:hidden
-}
-canvas{
-  position:fixed;
-  inset:0;
-  z-index:0
-}
-.wrapper{
-  position:relative;
-  z-index:2;
-  height:100%;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:20px;
-  padding:16px
-}
-.title{
-  font-size:18px;
-  letter-spacing:2px;
-  color:#4dd2ff;
-  text-align:center
-}
-.subtitle{
-  font-size:12px;
-  opacity:.6;
-  letter-spacing:3px
-}
-.panel{
-  width:95%;
-  max-width:1000px;
-  background:rgba(0,0,0,.75);
-  border:1px solid #4dd2ff;
-  padding:16px;
-  display:flex;
-  flex-direction:column;
-  gap:12px
-}
-.row{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  font-size:13px
-}
-.bar{
-  width:60%;
-  height:6px;
-  background:#111;
-  border:1px solid #4dd2ff
-}
-.fill{
-  height:100%;
-  background:#4dd2ff;
-  transition:width 1s
-}
-.alert{
-  color:#ff4d4d;
-  animation:blink 1s infinite
-}
+html,body{width:100%;height:100%;background:#000;color:#9fe7ff;font-family:"Courier New",monospace}
+canvas{position:fixed;inset:0;z-index:0}
+.wrapper{position:relative;z-index:2;padding:16px;display:flex;flex-direction:column;gap:16px}
+.title{color:#4dd2ff;letter-spacing:2px;font-size:18px}
+.panel{border:1px solid #4dd2ff;padding:12px;background:rgba(0,0,0,.75)}
+.row{display:flex;justify-content:space-between;font-size:13px;margin-bottom:6px}
+.bar{width:60%;height:6px;border:1px solid #4dd2ff}
+.fill{height:100%;background:#4dd2ff;transition:width 1s}
+.alert{color:#ff4d4d;animation:blink 1s infinite}
 @keyframes blink{50%{opacity:.4}}
-#map{
-  width:100%;
-  height:320px;
-  border:1px solid #4dd2ff;
-  margin-top:10px
-}
-.footer{
-  font-size:10px;
-  opacity:.4;
-  text-align:center
-}
+#map{height:360px;border:1px solid #4dd2ff;margin-top:10px}
+.footer{font-size:10px;opacity:.4;text-align:center}
 </style>
 </head>
 
 <body>
 
-<canvas id="field"></canvas>
+<canvas id="bg"></canvas>
 
 <div class="wrapper">
   <div class="title">ПЛАНЕТАРНИЙ ЕКОЛОГІЧНИЙ OSINT</div>
-  <div class="subtitle">СЕНСОР НАПРУГИ РЕАЛЬНОСТІ</div>
 
   <div class="panel">
-
-    <div class="row">АТМОСФЕРА<div class="bar"><div id="air" class="fill"></div></div></div>
-    <div class="row">ВОДА<div class="bar"><div id="water" class="fill"></div></div></div>
     <div class="row">ПОЖЕЖІ<div class="bar"><div id="fire" class="fill"></div></div></div>
+    <div class="row">ПОВЕНІ<div class="bar"><div id="flood" class="fill"></div></div></div>
+    <div class="row">ШТОРМИ<div class="bar"><div id="storm" class="fill"></div></div></div>
     <div class="row">БІОСФЕРА<div class="bar"><div id="bio" class="fill"></div></div></div>
-    <div class="row">СУША<div class="bar"><div id="land" class="fill"></div></div></div>
-
-    <div class="row alert" id="anomaly">ПОЛЕ АНОМАЛІЙ: СТАБІЛЬНЕ</div>
+    <div class="row alert" id="anomaly">ПОЛЕ АНОМАЛІЙ: АНАЛІЗ…</div>
 
     <div id="map"></div>
   </div>
 
-  <div class="footer">
-    ibonarium.ecology · планетарний модуль зафіксовано
-  </div>
+  <div class="footer">ibonarium.ecology · OSINT без фальші</div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script>
-/* ===== ПЛАНЕТАРНЕ ПОЛЕ ===== */
-const c=document.getElementById("field"),x=c.getContext("2d");
+/* ===== BACKGROUND ===== */
+const c=document.getElementById("bg"),x=c.getContext("2d");
 let W,H,P=[];
 function resize(){
   W=c.width=innerWidth;H=c.height=innerHeight;
-  P=Array.from({length:260},()=>({x:Math.random()*W,y:Math.random()*H,z:Math.random()*W}));
+  P=Array.from({length:200},()=>({x:Math.random()*W,y:Math.random()*H,z:Math.random()*W}));
 }
 resize();addEventListener("resize",resize);
-
-function draw(){
+(function draw(){
   x.fillStyle="#000";x.fillRect(0,0,W,H);
   P.forEach(p=>{
-    p.z-=0.18;if(p.z<1)p.z=W;
+    p.z-=0.2;if(p.z<1)p.z=W;
     let k=120/p.z;
     let px=(p.x-W/2)*k+W/2;
     let py=(p.y-H/2)*k+H/2;
-    if(px>0&&py>0&&px<W&&py<H){
-      x.fillStyle="rgba(77,210,255,.6)";
-      x.fillRect(px,py,2,2);
-    }
+    if(px>0&&py>0&&px<W&&py<H)x.fillRect(px,py,2,2);
   });
   requestAnimationFrame(draw);
-}
-draw();
+})();
 
-/* ===== OSINT ІНДЕКС ===== */
-function r(a,b){return Math.random()*(b-a)+a}
-function update(){
-  let a=r(45,90),w=r(35,85),f=r(50,95),b=r(30,70),l=r(40,80);
-  air.style.width=a+"%";water.style.width=w+"%";
-  fire.style.width=f+"%";bio.style.width=b+"%";land.style.width=l+"%";
-  let s=(a+w+f+b+l)/5;
-  anomaly.textContent =
-    s>75 ? "ПОЛЕ АНОМАЛІЙ: КРИТИЧНЕ" :
-    s>60 ? "ПОЛЕ АНОМАЛІЙ: АКТИВНЕ" :
-           "ПОЛЕ АНОМАЛІЙ: СТАБІЛЬНЕ";
-}
-update();setInterval(update,60000);
-
-/* ===== LIVE MAP ===== */
+/* ===== MAP ===== */
 const map=L.map("map",{zoomControl:false}).setView([20,0],2);
+L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png").addTo(map);
 
-L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",{
-  attribution:""
-}).addTo(map);
-
-/* 🔥 ПОЖЕЖІ — NASA FIRMS */
-L.tileLayer(
-  "https://firms.modaps.eosdis.nasa.gov/mapserver/wms/fires/viirs_snpp_24h?SERVICE=WMS&REQUEST=GetMap&VERSION=1.1.1&LAYERS=fires&STYLES=&FORMAT=image/png&TRANSPARENT=true&SRS=EPSG:3857&BBOX={bbox-epsg-3857}&WIDTH=256&HEIGHT=256",
-  {opacity:0.7}
+/* 🔥 FIRE — NASA FIRMS */
+const fireLayer=L.tileLayer(
+  "https://firms.modaps.eosdis.nasa.gov/mapserver/wms/fires/viirs_snpp_24h?SERVICE=WMS&REQUEST=GetMap&VERSION=1.1.1&LAYERS=fires&FORMAT=image/png&TRANSPARENT=true&SRS=EPSG:3857&BBOX={bbox-epsg-3857}&WIDTH=256&HEIGHT=256",
+  {opacity:.7}
 ).addTo(map);
 
-/* 🌊 ПОВЕНІ — GDACS */
-L.tileLayer.wms("https://www.gdacs.org/gdacsapi/api/polygons/getmap",{
-  layers:"FL",
-  format:"image/png",
-  transparent:true,
-  opacity:0.6
-}).addTo(map);
+/* 🌊 FLOOD — GDACS */
+const floodLayer=L.tileLayer.wms(
+  "https://www.gdacs.org/gdacsapi/api/polygons/getmap",
+  {layers:"FL",transparent:true,opacity:.6}
+).addTo(map);
+
+/* ===== GDACS EVENTS (REAL DATA) ===== */
+async function updateEvents(){
+  const res=await fetch("https://www.gdacs.org/xml/rss.xml");
+  const text=await res.text();
+  const fires=(text.match(/Fire/g)||[]).length;
+  const floods=(text.match(/Flood/g)||[]).length;
+  const storms=(text.match(/Cyclone|Storm/g)||[]).length;
+
+  fire.style.width=Math.min(fires*10,100)+"%";
+  flood.style.width=Math.min(floods*15,100)+"%";
+  storm.style.width=Math.min(storms*20,100)+"%";
+
+  const score=fires+floods+storms;
+  anomaly.textContent=
+    score>12?"ПОЛЕ АНОМАЛІЙ: КРИТИЧНЕ":
+    score>6 ?"ПОЛЕ АНОМАЛІЙ: АКТИВНЕ":
+             "ПОЛЕ АНОМАЛІЙ: СТАБІЛЬНЕ";
+}
+
+updateEvents();
+setInterval(updateEvents,300000);
 </script>
 
 </body>
